[gd_scene load_steps=6 format=2]

[ext_resource path="res://res/worldsprites.png" type="Texture" id=1]
[ext_resource path="res://src/UI/BuildingMenu.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[node name="BuildingMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Village" type="TextureButton" parent="."]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
texture_normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grassland" type="TextureButton" parent="."]
margin_left = 96.0
margin_top = -64.0
margin_right = 128.0
margin_bottom = -32.0
texture_normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forest" type="TextureButton" parent="."]
margin_left = 96.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0
texture_normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Village" to="." method="_on_Village_pressed"]
[connection signal="pressed" from="Grassland" to="." method="_on_Grassland_pressed"]
[connection signal="pressed" from="Forest" to="." method="_on_Forest_pressed"]
